--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".content.ListBaiViet" />
         <activity android:name=".content.ChiTietBaiViet" />
         <activity android:name=".tab3.ThemNhatKy" />
+        <activity android:name=".tab3.ChiTietNhatKy" />
         <activity android:name=".MainActivity" />
         <activity android:name=".tab2.SendMail"></activity>
     </application>
