--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,14 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+}
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -30,6 +38,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
+    compile 'de.hdodenhof:circleimageview:1.2.1'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
 
 
